MilestoneRFAFullSandBox/src/objects/RFA__c.object
<CustomObject>
    <description>Request For Authorization</description>
    <fields>
        <fullName>Admin_Comment__c</fullName>
        <label>Admin Comment</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agents_Name__c</fullName>
        <label>Agents Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ApprovalLetterComments__c</fullName>
        <inlineHelpText>条件付きの承認条件を表すコメント。</inlineHelpText>
        <label>Follow-up: Approver Comments/Conditions</label>
        <picklist>
            <picklistValues>
                <fullName>The requesting party must ensure appropriate coordination with the above approver(s) to fully address any and all approval conditions.  Any failure to fully address these conditions will be subject to Audit review.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The requesting party must fully comply with the above approval conditions, although explicit communication or follow up with these approvers is not required.  Any failure to fully address these conditions will be subject to Audit review.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <label>Approver Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCGBenefit_FinancialMatrix_Assumption_CS__c</fullName>
        <defaultValue>&quot;実施によりもたらされる定量的効果と定性的効果を記載します。&quot; +BR()+
&quot;　・利益/売上高/販売数量/シェアの拡大、コスト削減等の定量的な効果を記載&quot; +BR()+
&quot;　・リスク回避、法的規制への対応、業務品質の向上、コンプライアンス遵守等の定性的な効果を記載&quot;

+BR()+BR()+

&quot;Describe the strategic, business and qualitative benefits. Consider competitive advantage, volume/value share, per capital consumption, brand measures, social responsibility.&quot; +BR()+
&quot;Describe other benefits, including cost reduction, risk avoidance, and legal/regulatory/quality compliance.&quot; +BR()+
&quot;Provide an analysis of overall financial and economic impact (for example NPV/IRR, payback, and EP), including underlying assumptions.&quot;</defaultValue>
        <label>Benefits/Financial Metrics/Assumptions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCG_Benefit_FinancialMetric_Assumption_G__c</fullName>
        <defaultValue>&quot;実施によりもたらされる定量的効果と定性的効果を記載します。&quot; +BR()+
&quot;　・利益/売上高/販売数量/シェアの拡大、コスト削減等の定量的な効果を記載&quot; +BR()+
&quot;　・リスク回避、法的規制への対応、業務品質の向上、コンプライアンス遵守等の定性的な効果を記載&quot;

+BR()+BR()+

&quot;Describe the strategic, business and qualitative benefits. Consider competitive advantage, volume/value share, per capital consumption, brand measures, social responsibility.&quot; +BR()+ 
&quot;Describe other benefits, including cost reduction, risk avoidance, and legal/regulatory/quality compliance.&quot;</defaultValue>
        <label>Benefits/Financial Metrics/Assumptions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCG_Cost_Estimates_CPSP__c</fullName>
        <defaultValue>&quot;実施に伴う費用（CAPEX,OPEX、DME)の予定額を記載します。&quot; +BR()+
&quot;　・費用内訳を記載（設備投資額、人員増に伴う人件費、外部業者の委託費等）&quot; +BR()+
&quot;　・購入する機械設備や装置の概要について詳細記載（メーカー、モデル、仕様等）&quot; +BR()+
&quot;　・複数業者の相見積もりを前提とし、費用、機能、品質等の比較した結果を記載&quot;

+BR()+BR()+

&quot;Detail estimated costs and expenses, including OPEX, DME, and CAPEX.&quot; +BR()+
&quot;Include key drivers for costs (e.g. additional people expense, fixed asset investment and external/third-party costs).&quot; +BR()+
&quot;Provide a detailed list of the project, such as civil work, line equipment etc.&quot; +BR()+
&quot;Provide a description of the machinery and equipment to be purchased, e.g. type, model and any specification. If request is for production equipment, provide the production capacity and the associated incremental volume (if applicable).&quot; +BR()+
&quot;Include supplier/manufacturer cost quotes, if applicable.&quot; +BR()+
&quot;Justify the reasonableness of cost or price of goods or services using relevant benchmarks.&quot; +BR()+
&quot;Describe any cost sharing arrangements with external partners.&quot;</defaultValue>
        <label>Cost Estimates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCG_Cost_Estimates_G__c</fullName>
        <defaultValue>&quot;実施に伴う費用（CAPEX,OPEX、DME)の予定額を記載します。&quot; +BR()+
&quot;　・費用内訳を記載（設備投資額、人員増に伴う人件費、外部業者の委託費等）&quot; +BR()+
&quot;　・損益インパクトや必要な場合には貸借対照表（B/S)への影響を記載&quot;

+BR()+BR()+

&quot;Detail estimated costs and expenses, including OPEX, DME, and CAPEX.&quot; +BR()+
&quot;Include key drivers for costs (e.g. additional people expense, assets and external / third-party costs).&quot; +BR()+
&quot;Describe the income statement (gain or loss on sale) and/or balance sheet impact of the transaction, if applicable.&quot;</defaultValue>
        <label>Cost Estimates</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCG_General_Comment_CPSM__c</fullName>
        <defaultValue>&quot;承認者が経営判断をするために十分な情報を記載する必要があります。&quot; + BR()+
&quot;ビジネスケースでは以下の内容について説明してください。&quot;

+ BR() + BR() +

&quot;The Business Case should be sufficient to gain management alignment and approval. The following information is mandatory for the Business Case.&quot;
+ BR() +
&quot;The following items should be included in the business case, if relevant.&quot;</defaultValue>
        <description>General Comment for Capital / Small</description>
        <label>General Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCG_General_Comment__c</fullName>
        <defaultValue>&quot;ビジネスケースでは以下の内容について説明してください。&quot; +BR()+
&quot;・承認者が経営判断をするために十分な情報を記載する必要があります。&quot; +BR()+
&quot;・高額な投資案件やマーケティング・コンサルティング契約、M&amp;A契約などには、ビジネスケースは必ず記載してください。&quot; +BR()+
&quot;・製品廃棄等の在庫調整、資産の減損処理等の定期的に実施する申請では、ビジネスケースの詳細な記載は不要です。&quot; 

+BR()+BR()+

&quot;The following items should be included in the business case, if relevant.&quot; +BR()+
&quot;The Business Case should be sufficient to gain management alignment and approval. The following information is mandatory for the Business Case. Certain items below are generally applicable to significant capital commitments and agreements such as mergers &amp; acquisitions, marketing, supply and purchase commitments, consulting, etc., but may not be relevant for more routine requests such as inventory adjustments, asset impairments, etc. In this case, please make a note in the respective field.&quot;</defaultValue>
        <label>General Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCG_Objectives_Rationale_Background__c</fullName>
        <defaultValue>&quot;RFA承認申請の概要やその背景について記載します。&quot; +BR()+ 
&quot;　・投資概要や契約条件等の具体的な内容を記載&quot; +BR()+
&quot;　・実行により期待される効果や現状の問題解決内容等、申請目的と根拠 を記載&quot; +BR()+
&quot;　・申請の背景を記載（過去の経緯：新規の案件または契約更新、契約先との取引有無等）&quot;

+BR()+BR()+

&quot;Provide an overview and scope of the request.&quot; +BR()+ 
&quot;Describe objectives and rationale, including problem or opportunity we are solving and the proposed solution / desired outcome.&quot; +BR()+
&quot;Describe background (include the history with this type of transaction, whether the transaction is a renewal, and experience with any relevant third parties.)&quot; +BR()+
&quot;Describe the specific business request to be approved including terms.&quot;</defaultValue>
        <label>Objectives/Rationale/Background</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BCG_Risks_and_Alternatives_G__c</fullName>
        <defaultValue>&quot;リスクとその軽減策や代替案を具体的に記載します。&quot; +BR()+
&quot;　・リスク：実行中止やスケジュール遅延、費用増等の可能性について記載&quot; +BR()+
&quot;　・軽減策：修正スケジュールや投資内容の見直し等の対応策を記載&quot; +BR()+
&quot;　・代替案：申請の内容が承認されなかった場合の考え得る最良の代替案について記載&quot;

+BR()+BR()+

&quot;Describe business risks, including risks of inaction or delay. Outline specific risks and mitigating factors including those related to technology, complexity, operational business or timeline.&quot; +BR()+
&quot;Explain alternative scenarios or solutions considered (financial and/or business) and the rationale for rejecting them in favor of recommended solution.&quot; +BR()+
&quot;Describe the optimal alternative action the operation would consider, including financial impact.&quot;</defaultValue>
        <label>Risks and Alternatives</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Benefits_Financial_Metrics_Assumptions__c</fullName>
        <label>Input</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BoardSubItem__c</fullName>
        <inlineHelpText>取締役会の承認が必要な場合に入力して下さい。</inlineHelpText>
        <label>Board Item</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BottlerDiscPaybackPeriodYears__c</fullName>
        <inlineHelpText>損益分岐点を上回るまでにかかる年数（投資と収益の関係において）。</inlineHelpText>
        <label>Bottler Disc. Payback Period-Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BottlerIRR__c</fullName>
        <inlineHelpText>内部収益率</inlineHelpText>
        <label>Bottler IRR (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BottlerInvestmentDepreciationYears__c</fullName>
        <label>Bottler Investment Depreciation Years</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BottlerLocalEffectiveTaxRate__c</fullName>
        <inlineHelpText>Effective tax rate of the bottler involved in the transaction.</inlineHelpText>
        <label>Bottler Local Effective Tax Rate (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BottlerParticipationAmountFC__c</fullName>
        <inlineHelpText>The bottler&apos;s portion of the cost, as opposed to the Company.</inlineHelpText>
        <label>Bottler Participation Amount (JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BottlerParticipationAmountUSD__c</fullName>
        <formula>BottlerParticipationAmountFC__c 
/*
BottlerParticipationAmountFC__c * ARERate__c
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The bottler&apos;s portion of the cost, as opposed to the Company.</inlineHelpText>
        <label>Bottler Participation Amount (USD $)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BottlerParticipation__c</fullName>
        <inlineHelpText>The bottler&apos;s percentage portion of the cost, as opposed to the Company.</inlineHelpText>
        <label>Bottler Participation (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BottlerWACC__c</fullName>
        <inlineHelpText>Weighted average cost of capital for the bottler use for comparative purposes.</inlineHelpText>
        <label>Bottler WACC (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BudgetType__c</fullName>
        <inlineHelpText>【執行伺い】は、投資の詳細内容が概ね確定していて実際の実行前に申請する場合に選択します。 【方針伺い】は、詳細内容が決定しておらず執行伺いを申請することはできないが、多額の支出を予定する案件のため、事前に情報を共有し予算確保を目的とする場合に選択します。</inlineHelpText>
        <label>Budget Type</label>
        <picklist>
            <picklistValues>
                <fullName>Formal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Approval_Number__c</fullName>
        <inlineHelpText>予算承認番号はサイドバーのCAPEXプラン予算承認リストを参照して入力してください</inlineHelpText>
        <label>Budget Approval Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Case_Financials_Guideline__c</fullName>
        <defaultValue>&quot;財務分析を確認のうえ以下の数字を入力してください&quot;

+BR()+

&quot;Look at financial analysis and fill out the number below.&quot;</defaultValue>
        <label>Business Case Financials Guideline</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCEJ_Attendees_Name_Title_or_Function__c</fullName>
        <description>Entertainment</description>
        <label>CCEJ Attendees Name/Title or Function</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCEmailAddressCM__c</fullName>
        <label>CCEmailAddressCM</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CC__c</fullName>
        <label>CC</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CM_After_Operating_Profit__c</fullName>
        <description>CM使用</description>
        <label>Operating Profit (After)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CM_Company_receiving_after_approval_mail__c</fullName>
        <label>Company receiving after approval mail</label>
        <picklist>
            <picklistValues>
                <fullName>TONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIKUNI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TOKYO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCCJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UVXN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FVS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FVCe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCEJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>- None -</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CM_Contract_unit_price_FA_ACR__c</fullName>
        <description>01. 契約単価/最終承認者COA略称</description>
        <label>01. Final Approver COA Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Contract_unit_price_FA_Name__c</fullName>
        <description>01. 契約単価/最終承認ユーザ名</description>
        <label>01. Final Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Contract_unit_price_FA__c</fullName>
        <description>1.契約単価 最終承認者</description>
        <formula>CM_Contract_unit_price_FA_ACR__c &amp;&quot; / &quot;&amp; CM_Contract_unit_price_FA_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>01. Final Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Contract_unit_price__c</fullName>
        <label>01. Contract unit price</label>
        <picklist>
            <controllingField>CM_PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>Category A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard wholesale price, and set above the standard wholesale price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside of the object of approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealings by OCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The deletion request of registration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Contribution_margin_After__c</fullName>
        <label>Contribution margin(after/JPY)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CM_Contribution_margin_Before__c</fullName>
        <label>Contribution margin(before/JPY)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CM_Contribution_margin_Difference__c</fullName>
        <formula>IF( isNull(CM_Contribution_margin_Before__c), null , CM_Contribution_margin_After__c  -  CM_Contribution_margin_Before__c)</formula>
        <label>Contribution margin(difference/JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CM_Customer_Dealer_Name__c</fullName>
        <label>Customer / Dealer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Direct_Profit_After__c</fullName>
        <label>Direct Profit(after/JPY)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CM_Direct_Profit_Before__c</fullName>
        <label>Direct Profit(before/JPY)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CM_Direct_Profit_Difference__c</fullName>
        <formula>if ( isNull(CM_Direct_Profit_Before__c), null, CM_Direct_Profit_After__c - CM_Direct_Profit_Before__c)</formula>
        <label>Direct Profit(difference/JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CM_Equipment_CVM__c</fullName>
        <description>CM使用</description>
        <label>CVM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_Equipment_Cooler__c</fullName>
        <description>Equipment Cooler
CM使用</description>
        <label>Cooler</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_Equipment_Dispenser__c</fullName>
        <description>Equipment Dispenser
CM使用</description>
        <label>Dispenser</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_Equipment_OtherVM__c</fullName>
        <description>その他VM
CM使用</description>
        <label>Other VM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_Equipment_Other__c</fullName>
        <description>CM使用</description>
        <label>Other</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_Equipment_retirement_FA_ACR__c</fullName>
        <description>e. 取引先における販売機材の購入・売却申請/最終承認者COA略称</description>
        <label>e. Final Approver COA Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Equipment_retirement_FA_Name__c</fullName>
        <description>e. 取引先における販売機材の購入・売却申請/最終承認ユーザ名</description>
        <label>e. Final Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Equipment_retirement_FA__c</fullName>
        <formula>CM_Equipment_retirement_FA_ACR__c  &amp;&quot; / &quot;&amp;  CM_Equipment_retirement_FA_Name__c</formula>
        <label>e. Final Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Equipment_retirement__c</fullName>
        <label>e. Equipment retirement</label>
        <picklist>
            <controllingField>CM_PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>Necessity of sales/transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Depletion treatment of equipment whose whereabouts are unaccounted for</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Establishment_CanPet__c</fullName>
        <description>缶PET
CM使用</description>
        <label>Can PET VM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CM_FS_Commission_Fixed_FA_ACR__c</fullName>
        <description>05. FSｺﾐｯｼｮﾝ（固定）/最終承認者COA略称</description>
        <label>05. Final Approver COA Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_FS_Commission_Fixed_FA_Name__c</fullName>
        <description>05. FSｺﾐｯｼｮﾝ（固定）/最終承認ユーザ名</description>
        <label>05. Final Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_FS_Commission_Fixed_FA__c</fullName>
        <description>5.FSｺﾐｯｼｮﾝ（固定） 最終承認者</description>
        <formula>CM_FS_Commission_Fixed_FA_ACR__c  &amp;&quot; / &quot;&amp;  CM_FS_Commission_Fixed_FA_Name__c</formula>
        <label>05. Final Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_FS_Commission_Fixed__c</fullName>
        <description>CMで使用</description>
        <label>05. FS commission (Fixed)</label>
        <picklist>
            <controllingField>CM_PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>Pay in fixed amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_FS_Commission_Variable_FA_ACR__c</fullName>
        <description>04. FSｺﾐｯｼｮﾝ（変動）/最終承認者COA略称</description>
        <label>04. FInal Approver COA Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_FS_Commission_Variable_FA_Name__c</fullName>
        <label>04. Final Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_FS_Commission_Variable_FA__c</fullName>
        <description>4.FSｺﾐｯｼｮﾝ（変動）最終承認者</description>
        <formula>CM_FS_Commission_Variable_FA_ACR__c  &amp;&quot; / &quot;&amp;  CM_FS_Commission_Variable_FA_Name__c</formula>
        <label>04. Final Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_FS_Commission_Variable__c</fullName>
        <description>CMで使用</description>
        <label>04. FS commission (Variable)</label>
        <picklist>
            <controllingField>CM_PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>Category A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_FS_selling_price_FA_ACR__c</fullName>
        <description>03. FS販売価格/終承認者COA略称</description>
        <label>03. Final Approver COA Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_FS_selling_price_FA_Name__c</fullName>
        <description>03. FS販売価格/最終承認ユーザ名</description>
        <label>03. Final Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_FS_selling_price_FA__c</fullName>
        <description>3.FS販売価格 最終承認者</description>
        <formula>CM_FS_selling_price_FA_ACR__c  &amp;&quot; / &quot;&amp;  CM_FS_selling_price_FA_Name__c</formula>
        <label>03. Final Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_FS_selling_price__c</fullName>
        <label>03. FS selling price</label>
        <picklist>
            <controllingField>CM_PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>Category B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_FinalApprovalBy_ACR__c</fullName>
        <description>B項目全体の最終承認者COA略称</description>
        <label>Final Approver COA Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_FinalApprovalBy_Name__c</fullName>
        <description>B項目全体の最終承認ユーザ名</description>
        <label>Final Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_FinalApprovalBy__c</fullName>
        <description>最終承認者</description>
        <formula>CM_FinalApprovalBy_ACR__c &amp;&quot;/&quot;&amp;  CM_FinalApprovalBy_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_GP_After__c</fullName>
        <label>GP(after/JPY)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CM_GP_Before__c</fullName>
        <label>GP(before/JPY)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CM_GP_Difference__c</fullName>
        <formula>IF( isNull(CM_GP_Before__c), null , CM_GP_After__c - CM_GP_Before__c)</formula>
        <label>GP(difference/JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CM_Incidental_work_FA_ACR__c</fullName>
        <description>c. 附帯工事申請/最終承認者COA略称</description>
        <label>c. Final Approver COA Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Incidental_work_FA_Name__c</fullName>
        <description>c. 附帯工事申請/最終承認ユーザ名</description>
        <label>c. Final Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Incidental_work_FA__c</fullName>
        <description>c.附帯工事申請 最終承認者</description>
        <formula>CM_Incidental_work_FA_ACR__c  &amp;&quot; / &quot;&amp;  CM_Incidental_work_FA_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>c. Final Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Incidental_work__c</fullName>
        <label>c. Incidental work</label>
        <picklist>
            <controllingField>CM_PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>Total amount per transaction ＞ 500,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total amount per transaction ≦ 500,000 yen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Initiative_Department__c</fullName>
        <description>発議部署</description>
        <label>Initiative department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_KeyMoney_Rebate_Sport_Other_FA_ACR__c</fullName>
        <description>06. ｷｰﾏﾈｰ、ﾘﾍﾞｰﾄ、ｽﾎﾟｯﾄ他/最終承認者COA 略称</description>
        <label>06. Final Approver COA Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_KeyMoney_Rebate_Sport_Other_FA_Name__c</fullName>
        <description>06. ｷｰﾏﾈｰ、ﾘﾍﾞｰﾄ、ｽﾎﾟｯﾄ他/最終承認ユーザ名
CM使用</description>
        <label>06. Final Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_KeyMoney_Rebate_Sport_Other_FA__c</fullName>
        <description>6.キーマネー/スポット 最終承認者</description>
        <formula>CM_KeyMoney_Rebate_Sport_Other_FA_ACR__c  &amp;&quot; / &quot;&amp;  CM_KeyMoney_Rebate_Sport_Other_FA_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>06. Final Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_KeyMoney_Rebate_Sport_Other__c</fullName>
        <description>CMで使用</description>
        <label>06. Key money / Rebate / Spot / Other</label>
        <picklist>
            <controllingField>CM_PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>Total amount per transaction ＞ 50,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 35,000,000 yen and ≦ 50,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 25,000,000 yen and ≦ 50,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 25,000,000 yen and ≦ 35,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 10,000,000 yen and ≦ 25,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 1,000,000 yen and ≦ 25,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 3,000,000 yen and ≦ 10,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>≦ 3,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 1,000,000 yen and ≦ 10,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>≦ 1,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>＞ 100,000 yen and ≦ 1,000,000 yen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>≦ 100,000 yen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_NSR_After__c</fullName>
        <label>NSR(after/JPY)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CM_NSR_Before__c</fullName>
        <label>NSR(before/JPY)</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CM_NSR_Difference__c</fullName>
        <formula>if ( isNull(CM_NSR_Before__c), null, CM_NSR_After__c - CM_NSR_Before__c)</formula>
        <label>NSR(difference/JPY)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CM_Non_standard_Equipment_FA_ACR__c</fullName>
        <description>a. 採用外機種の申請/最終承認者OA略称</description>
        <label>a. Final Approver COA Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Non_standard_Equipment_FA_Name__c</fullName>
        <description>a. 採用外機種の申請/最終承認ユーザ名</description>
        <label>a. Final Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Non_standard_Equipment_FA__c</fullName>
        <description>a.採用外機種の申請 最終承認者</description>
        <formula>CM_Non_standard_Equipment_FA_ACR__c  &amp;&quot; / &quot;&amp;  CM_Non_standard_Equipment_FA_Name__c</formula>
        <label>a. Final Approver</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Non_standard_Equipment__c</fullName>
        <label>a. Non-standard Equipment</label>
        <picklist>
            <controllingField>CM_PrimaryCOASubCategory__c</controllingField>
            <picklistValues>
                <fullName>1. Application for Non-standard Equipment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CM_Only_in_the_case_of_Rebate_FA_ACR__c</fullName>
        <description>07. 実績後払いリベートのみ/最終承認者COA略称</description>
        <label>07. Final Approver COA Acronym</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Only_in_the_case_of_Rebate_FA_Name__c</fullName>
        <description>07. 実績後払いリベートのみ/最終承認ユーザ名</description>
        <label>07. Final Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CM_Only_in_the_case_of_Rebate_FA__c</fullName>
        <description>7.実績後払いリベート 最終承認者</description>
        <formula>CM_Only_in_the_case_of_Rebate_FA_ACR__c  &amp;&quot; / &quot;&amp;  CM_Only_in_the_case_of_Rebate_FA_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>07. Final Approver</label>
        <type>Text</type>
    </fields>
</CustomObject>